# AIEcosystemSample

./: .gitignore  AI_README.md  README.md  settings.gradle.kts  test_improvements.py
.claude/: mcp.json
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/mh/aiecosystempoc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mh/aiecosystemsample/ai/architecture/: android-architecture.md
app/src/main/java/com/mh/aiecosystemsample/ai/features/: login-feature.md
app/src/main/java/com/mh/aiecosystemsample/ai/orchestrator/: agent-flow.md
app/src/main/java/com/mh/aiecosystemsample/ai/templates/: AI_ORCHESTRATOR_REPORT_TEMPLATE.md  feature_template.md
app/src/main/java/com/mh/aiecosystemsample/core/analytics/: AnalyticsManager.kt
app/src/main/java/com/mh/aiecosystemsample/core/logger/: AppLogger.kt
app/src/main/java/com/mh/aiecosystemsample/core/navigation/: AppNavHost.kt  AppNavigator.kt
app/src/main/java/com/mh/aiecosystemsample/core/network/: NetworkClient.kt  Repository.kt
app/src/main/java/com/mh/aiecosystemsample/core/remoteconfig/: AppConfig.kt  RemoteConfigKeys.kt  (+1 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/mh/aiecosystempoc/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
llm-servers/: .env.example  README.md  fetch_figma.py  figma_mcp_server.py  figma_test.py  pyproject.toml  start_figma_mcp.py  test_figma_mcp.py
tools/figma/: README.md  generate_theme.py  normalize_figma_node.py  ui_schema_definition.json
(+23 files in other folders)
