[project]
name = "figma-mcp-server"
version = "0.1.0"
description = "MCP server for Figma API - fetches design data for AI agents"
requires-python = ">=3.10"
dependencies = [
    "mcp[server]>=1.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
figma-mcp = "figma_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"